add 2 papers, add a dependency for set, update program structure, start adding vcgen

--- a/smallfootreplica/smallfootreplica.cabal
+++ b/smallfootreplica/smallfootreplica.cabal
@@ -29,6 +29,7 @@ library
       Lib
       Parser
       Program
+      VariableConditions
       VCGen
   other-modules:
       Paths_smallfootreplica
@@ -37,6 +38,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , containers
   default-language: Haskell2010
 
 executable smallfootreplica-exe
@@ -48,6 +50,7 @@ executable smallfootreplica-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , smallfootreplica
   default-language: Haskell2010
 
@@ -61,5 +64,6 @@ test-suite smallfootreplica-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , smallfootreplica
   default-language: Haskell2010
