--- a/smallfootreplica/smallfootreplica.cabal
+++ b/smallfootreplica/smallfootreplica.cabal
@@ -40,6 +40,7 @@ library
       base >=4.7 && <5
     , containers
     , mtl
+    , parsec
   default-language: Haskell2010
 
 executable smallfootreplica-exe
@@ -53,6 +54,7 @@ executable smallfootreplica-exe
       base >=4.7 && <5
     , containers
     , mtl
+    , parsec
     , smallfootreplica
   default-language: Haskell2010
 
@@ -70,5 +72,6 @@ test-suite smallfootreplica-test
     , base >=4.7 && <5
     , containers
     , mtl
+    , parsec
     , smallfootreplica
   default-language: Haskell2010
