--- a/smallfootreplica/smallfootreplica.cabal
+++ b/smallfootreplica/smallfootreplica.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       CommandLineInterface
       Lib
+      Oracle
       Parser
       Program
       SymbolicExecution
